--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ruoyi",
   "version": "3.3.0",
-  "description": "若依管理系统",
-  "author": "若依",
+  "description": "冷库管理系统",
+  "author": "EasyArch_Ayuan",
   "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
